bump up bouncy-castle to 1.77, fix checkstyle violations